package main.backend.food;

import main.backend.common.Result;

public interface IFoodController {
    Result getList();
}
